Install fontawesame and create header

--- a/app/javascript/src/application.scss
+++ b/app/javascript/src/application.scss
@@ -1,1 +1,12 @@
 @import '~foundation-sites/dist/css/foundation';
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+
+// .top-bar {
+//   background: #333 !important;
+// }
+//  .menu {
+//   background: #333 !important;
+// }
+.header-small-accordion {
+  float: right;
+}
