--- a/app/views/word_books/new.html.erb
+++ b/app/views/word_books/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Word Book</h1>
+<h1>単語帳の作成</h1>
 
 <%= render 'form', word_book: @word_book %>
 
-<%= link_to 'Back', word_books_path %>
+<%= link_to '一覧に戻る', word_books_path %>
