Fix error layouts of form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,14 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="grid-container">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <% flash.each do |key, message| %>
+        <div class="callout <%= foundation_flash(key) %>" data-closable>
+          <%= message %>
+          <button class="close-button" aria-label="Dismiss alert" type="button" data-close>
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      <% end %>
       <%= yield %>
     </div>
   </body>
