--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -51,9 +51,18 @@ div {
 }
 
 .field_with_errors {
-  padding: 2px;
-  background-color: red;
-  display: table;
+  label {
+    color: red;
+  }
+  input {
+    border: solid 1px red;
+    background-color: #f7e4e1;
+    margin: 0;
+  }
+}
+
+.has-error {
+  color: red;
 }
 
 #error_explanation {
