--- a/app/views/word_books/_form.html.erb
+++ b/app/views/word_books/_form.html.erb
@@ -1,10 +1,29 @@
 <%= form_with(model: word_book, local: true, builder: CustomFormBuilder) do |f| %>
   <div class="field">
     <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: 'under-bar-form' %>
+  </div>
+
+  <div id='tasks'>
+    <%= f.fields_for :words do |task| %>
+      <%= render 'word_fields', :f => task %>
+    <% end %>
+    <div class='links'>
+      <%= link_to_add_association f, :words, class: "button primary" do %>
+        <%= t('word_books.button.add_words') %>
+        <i class="fas fa-plus-circle"></i>
+      <% end %>
+    </div>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <div class="grid-x grid-margin-x">
+      <div class="cell medium-6 small-12 medium-offset-3">
+        <%= f.submit nil, class: "button primary expanded" %>
+      </div>
+      <div class="cell medium-6 small-12 medium-offset-3">
+        <%= link_to t('word_books.button.back'), word_books_path, class: "button secondary expanded" %>
+      </div>
+    </div>
   </div>
 <% end %>
