--- a/app/views/word_books/_word_fields.html.erb
+++ b/app/views/word_books/_word_fields.html.erb
@@ -1,15 +1,15 @@
- <div class="card nested-fields">
+<div class="card nested-fields">
   <div class="card-section">
     <div class="field">
       <%= f.label :name %>
-      <%= f.text_field :name, class: 'under-bar-form' %>
+      <%= f.text_field :name, class: 'under-bar-form', placeholder: t('.label.name') %>
     </div>
     <div class="field">
       <%= f.label :translation %>
-      <%= f.text_field :translation, class: 'under-bar-form' %>
+      <%= f.text_field :translation, class: 'under-bar-form', placeholder: t('.label.translation') %>
     </div>
     <%= link_to_remove_association f, class: "button alert"  do %>
-      <%= t('word_books.button.remove_word') %>
+      <%= t('.button.remove_word') %>
       <i class="fas fa-times-circle"></i>
     <% end %>
   </div>
