Fixed view under app/views/layouts

--- a/app/javascript/stylesheets/foundation/_settings.scss
+++ b/app/javascript/stylesheets/foundation/_settings.scss
@@ -391,7 +391,7 @@ $dropdownmenu-arrow-color: $alert-color;
 $dropdownmenu-arrow-size: 6px;
 $dropdownmenu-arrow-padding: 1.5rem;
 $dropdownmenu-min-width: 200px;
-$dropdownmenu-background: $white;
+$dropdownmenu-background: null;
 $dropdownmenu-submenu-background: $dropdownmenu-background;
 $dropdownmenu-padding: $global-menu-padding;
 $dropdownmenu-nested-margin: 0;
