--- a/app/javascript/stylesheets/foundation/application.scss
+++ b/app/javascript/stylesheets/foundation/application.scss
@@ -48,3 +48,6 @@
 @include foundation-visibility-classes;
 @include foundation-float-classes;
 @include foundation-flex-classes;
+
+// Prototyping Utilities
+@include foundation-prototype-classes;
