--- a/app/javascript/stylesheets/foundation/_settings.scss
+++ b/app/javascript/stylesheets/foundation/_settings.scss
@@ -75,12 +75,14 @@ $foundation-palette: (
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
+  twitter: #1da1f2,
 );
 $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
 $white: #fefefe;
+$light-white: #fff;
 $gray: #888;
 $body-background: $white;
 $body-font-color: $black;
@@ -326,7 +328,7 @@ $callout-link-tint: 30%;
 // 14. Card
 // --------
 
-$card-background: $white;
+$card-background: $light-white;
 $card-font-color: $body-font-color;
 $card-divider-background: $light-gray;
 $card-border: 1px solid $light-gray;
