--- a/app/javascript/stylesheets/foundation/_settings.scss
+++ b/app/javascript/stylesheets/foundation/_settings.scss
@@ -389,7 +389,7 @@ $dropdown-sizes: (
 // -----------------
 
 $dropdownmenu-arrows: true;
-$dropdownmenu-arrow-color: $alert-color;
+$dropdownmenu-arrow-color: $anchor-color;
 $dropdownmenu-arrow-size: 6px;
 $dropdownmenu-arrow-padding: 1.5rem;
 $dropdownmenu-min-width: 200px;
