--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,40 +1,60 @@
-<h2><%= t('.title', resource: resource.model_name.human) %></h2>
+<div class="grid-x grid-margin-x">
+  <div class="cell medium-6 medium-offset-3 small-10 small-offset-1">
+    <div class="card">
+      <div class="card-section">
+        <div class="edit-form">
+          <h4 class="text-center"><%= t('.title', resource: resource.model_name.human) %></h4>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }, builder: CustomFormBuilder) do |f| %>
-  <div class="field">
-    <%= f.label :email %>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }, builder: CustomFormBuilder) do |f| %>
+            <div class="field">
+              <%= f.label :name %>
+              <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+            </div>
+
+            <div class="field">
+              <%= f.label :email %>
+              <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+            </div>
+
+            <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+              <div><%= t('.currently_waiting_confirmation_for_email', email: resource.unconfirmed_email) %></div>
+            <% end %>
+
+            <div class="field">
+              <%= f.label :password do %>
+                <%= t('.password') %>
+                <% if @minimum_password_length %>
+                  <%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %>
+                <% end %>
+              <% end %>
+              <%= f.password_field :password, autocomplete: "new-password", placeholder: t('.leave_blank_if_you_don_t_want_to_change_it') %>
+            </div>
+
+            <div class="field">
+              <%= f.label :password_confirmation %>
+              <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: t('.leave_blank_if_you_don_t_want_to_change_it') %>
+            </div>
+
+            <div class="field">
+              <%= f.label :current_password %>
+              <%= f.password_field :current_password, autocomplete: "current-password", placeholder: t('.we_need_your_current_password_to_confirm_your_changes') %>
+            </div>
+
+            <div class="actions">
+              <%= f.submit t('.update'), class: "button alert radius bordered shadow expanded" %>
+            </div>
+          <% end %>
+        </div>
+
+        <div class="delete-form">
+          <h4 class="text-center"><%= t('.cancel_my_account') %></h4>
+          <%= link_to t('.cancel_my_account'), registration_path(resource_name), data: { confirm: t('.are_you_sure') }, method: :delete, class: "button alert radius bordered shadow expanded" %>
+        </div>
+
+        <!-- 共通リンク -->
+        <%= link_to t('devise.shared.links.back'), :back %>
+      </div>
+    </div>
   </div>
+</div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div><%= t('.currently_waiting_confirmation_for_email', email: resource.unconfirmed_email) %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it') %>)</i>
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(<%= t('.we_need_your_current_password_to_confirm_your_changes') %>)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit t('.update') %>
-  </div>
-<% end %>
-
-<h3><%= t('.cancel_my_account') %></h3>
-
-<p><%= t('.unhappy') %> <%= button_to t('.cancel_my_account'), registration_path(resource_name), data: { confirm: t('.are_you_sure') }, method: :delete %></p>
-
-<%= link_to t('devise.shared.links.back'), :back %>
