--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,24 +1,52 @@
-<h2><%= t('.sign_up') %></h2>
+<div class="grid-x grid-margin-x">
+  <div class="cell medium-6 medium-offset-3 small-10 small-offset-1">
+    <div class="card">
+      <div class="card-section">
+        <div class="login-form">
+          <!-- フォームタイトル -->
+          <h4 class="text-center"><%= t('.sign_up') %></h4>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), builder: CustomFormBuilder) do |f| %>
-  <div class="field">
-    <%= f.label :email %>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          <!-- メールアドレス会員登録 -->
+          <div class="general-login">
+            <h6 class="text-center"><%= t('.sub_title.general') %></h6>
+
+            <%= form_for(resource, as: resource_name, url: registration_path(resource_name), builder: CustomFormBuilder) do |f| %>
+              <div class="field">
+                <%= f.label :name %>
+                <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+              </div>
+
+              <div class="field">
+                <%= f.label :email %>
+                <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+              </div>
+
+              <div class="field">
+                <%= f.label :password %>
+                <%= f.password_field :password, autocomplete: "new-password" %>
+              </div>
+
+              <div class="field">
+                <%= f.label :password_confirmation %>
+                <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+              </div>
+
+              <div class="actions">
+                <%= f.submit t('.sign_up'), class: "button alert radius bordered shadow expanded" %>
+              </div>
+            <% end %>
+          </div>
+
+          <!-- オーオースログイン --> 
+          <div class="oauth-login">
+            <h6 class="text-center"><%= t('.sub_title.oauth') %></h6>
+            <%= render "devise/shared/omniauth_links" %>
+          </div>
+        </div>
+
+        <!-- 共通リンク -->
+        <%= render "devise/shared/links" %>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit t('.sign_up') %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
