--- a/app/views/word_books/index.html.erb
+++ b/app/views/word_books/index.html.erb
@@ -1,27 +1,25 @@
-<h1>Word Books</h1>
+<%= tag.h4 t('.title') %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="grid-x grid-margin-x word_book_cards">
+  <% @word_books.each do |word_book| %>
+    <div class="cell large-4 medium-12">
+      <%= link_to word_book_path(word_book) do %>
+        <div class="work_book card word_book_card">
+          <div class="card-section">
+            <%= tag.div word_book.title %>
+            <%= tag.div do %>
+              <%= tag.span '単語数：' %>
+              <%= word_book.words.count %>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  <% end %>
+</div>
 
-  <tbody>
-    <% @word_books.each do |word_book| %>
-      <tr>
-        <td><%= word_book.title %></td>
-        <td><%= word_book.user_id %></td>
-        <td><%= link_to 'Show', word_book %></td>
-        <td><%= link_to 'Edit', edit_word_book_path(word_book) %></td>
-        <td><%= link_to 'Destroy', word_book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Word Book', new_word_book_path %>
+<div class="grid-x grid-margin-x">
+  <div class="cell medium-6 small-12 medium-offset-3">
+    <%= link_to t('.add_words'), new_word_book_path, class: 'button alert expanded' %>
+  </div>
+</div>
